# simple-chatbot

./: README.md  main.py  pyproject.toml
alembic/: env.py
app/: alembic.ini  config.py  database.py  main.py  utils.py
app/alembic/versions/: 24bbd69f93f2_.py  db88375fb8ec_.py
app/api/: __init__.py
app/api/dependencies/: auth.py  chatbot.py  core.py
app/api/endpoints/: auth.py  user.py
app/crud/: user.py
app/database/: __init__.py  dependencies.py
app/models/: user.py
app/schemas/: user.py
